    but sure that all NEED's will override the rest, that USE will override
    BEFORE/AFTER, and also check both the resolved and unresolved trees.

    Also test if RUNLEVEL is '1' besides 'S', fixing 'init 1'.

    Hack init.d/clock to wait for /dev/rtc if compiled as a module ... hopefully
    udev will get sorted soon.

  05 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    Rationalise if/then/else login in runscript.sh svc_start() and svc_stop()

    Fixed a few quoting issues in iwconfig
    Use return values instead of capturing stderr output for iwconfig commands

    Added # vim:ts=4 to all net-script files and re-indented

    ${svcdir}/dep{cache,tree} are now chmodded 0644 so users can read them

  04 Aug 2005; Martin Schlemmer <azarah@gentoo.org>:

    Update /sbin/rc to actually use init's single level, and also to launch
    sulogin, bug #66834.

    Fix a typo and some logic issues in new trace_dependencies().

    Whitespace cleanups in new trace_dependencies().

    Fix my own logic issue in new trace_dependencies().

  04 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    interface state directories are now created with -m 0755 to ensure that
    everyone can read them

    rc-daemon.sh now supports multiple cmds - partial fix for #98745

    trace_dependencies gets a re-write (again) to try and solve the hanging
    issues that many people are reporting

    More anal about RHS quoting

  02 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    0 timeout now means infinite for wpa_supplicant and iwconfig wrt #90443

    iwconfig no longer downs and ups the interface after a scan - instead we
    set essid any just before doing it

  01 Aug 2005; Mike Frysinger <vapier@gentoo.org>:

    Only create /dev/core if /proc/kcore exists #100978 by Timo Hirvonen.

  01 Aug 2005; Roy Marples <uberlord@gentoo.org>:

    dhclient now has to be told it can edit dhclient.conf instead of assuming
    it. Final fix to #100745.
